Fix inconsistent button spacing between darkroom button and admin menu

--- a/pub/css/darkroom.css
+++ b/pub/css/darkroom.css
@@ -46,7 +46,10 @@ CSS information
 	float: right;
 }
 #darkroom {
-	background-color:#000; color:#fff; border: 1px solid gray;
+	background-color:#000;
+	color:#fff;
+	border: 1px solid gray;
+	padding: 1px 6px;
 }
 
 .darkroom #darkroom {
