--- a/pub/css/layout.css
+++ b/pub/css/layout.css
@@ -7,7 +7,7 @@
 html {
 	overflow-y: scroll;
 }
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td {
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td,button {
 	margin: 0;
 	padding: 0;
 }
@@ -663,6 +663,11 @@ span.register-not-ok {
 
 #cad-result-admin-menu-pane {
 	float: right;
+}
+
+#cad-result-admin-menu {
+	margin-right: 15px;
+	padding: 1px 6px;
 }
 
 #cad-result-admin-menu-items {
